--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -57,6 +57,12 @@
                                                            value="{{ user.email }}"
                                                         required>
                                                 </div>
+                                                <div class="col-md-12 mb-3">
+                                                    <label for="id_phone_number" class="form-label">Номер телефона</label>
+                                                    <input type="phone_numberl" class="form-control" id="id_phone_number" name="phone_number"
+                                                           value="{{ user.phone_number }}"
+                                                        required>
+                                                </div>
                                             </div>
                                             <button type="submit" class="btn btn-dark">Сохранить</button>
                                         </form>
