--- a/goods/templates/goods/product.html
+++ b/goods/templates/goods/product.html
@@ -16,16 +16,18 @@
                     <div class="card mb-4 custom-shadow">
                         <div class="row">
                             <div class="col-md-4">
-                                    {% if good.image %}
-                                    <img src="{{ good.image.url }}" class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal1">
-                                    {% else %}
-                                        <img src="{% static 'deps/images/no image.png' %}" class="img-thumbnail" data-bs-toggle="modal" data-bs-target="#imageModal1">
-                                    {% endif %}
-                                </div>
+                                {% if good.image %}
+                                    <img src="{{ good.image.url }}" class="img-thumbnail" data-bs-toggle="modal"
+                                         data-bs-target="#imageModal1">
+                                {% else %}
+                                    <img src="{% static 'deps/images/no image.png' %}" class="img-thumbnail"
+                                         data-bs-toggle="modal" data-bs-target="#imageModal1">
+                                {% endif %}
+                            </div>
                             <!-- Миниатюры -->
 
                             <div class="col-md-4 ">
-                                <p class="product_id mt-3">id: {{ good.display_id}} </p>
+                                <p class="product_id mt-3">id: {{ good.display_id }} </p>
                             </div>
                             <!-- Увеличить изображение в модальном окне -->
                             <div class="modal fade" id="imageModal1" tabindex="-1"
@@ -33,15 +35,16 @@
                                 <div class="modal-dialog modal-lg">
                                     <div class="modal-content">
                                         <div class="modal-header">
-                                            <h5 class="modal-title" id="imageModal1Label">{{ good.name}}</h5>
+                                            <h5 class="modal-title" id="imageModal1Label">{{ good.name }}</h5>
                                             <button type="button" class="btn-close" data-bs-dismiss="modal"
                                                     aria-label="Закрыть"></button>
                                         </div>
                                         <div class="modal-body">
                                             {% if good.image %}
-                                            <img src="{{ good.image.url }}" class="img-fluid" alt="Изображение 1">
-                                                {% else %}
-                                            <img src="{% static 'deps/images/no image.png' %}" class="img-fluid" alt="Изображение 1">
+                                                <img src="{{ good.image.url }}" class="img-fluid" alt="Изображение 1">
+                                            {% else %}
+                                                <img src="{% static 'deps/images/no image.png' %}" class="img-fluid"
+                                                     alt="Изображение 1">
                                             {% endif %}
                                         </div>
                                     </div>
@@ -53,7 +56,8 @@
                             <p class="card-text">Цена: <strong>{{ good.real_price }} $</strong></p>
                             <h5 class="card-title">{{ good.name }}</h5>
                             <p class="card-text">{{ good.description }}</p>
-                            <a href="{% url 'carts:cart_add' %}" class="btn btn-dark add-to-cart" data-product-id="{{ good.id }}">
+                            <a href="{% url 'carts:cart_add' %}" class="btn btn-dark add-to-cart"
+                               data-product-id="{{ good.id }}">
                                 {% csrf_token %}
                                 Добавить в корзину</a>
                         </div>
