--- a/goods/templates/goods/search.html
+++ b/goods/templates/goods/search.html
@@ -19,48 +19,49 @@
 
 
             <form action="" method="get" class="dropdown-menu bg-dark"
-                      data-bs-theme="dark">
+                  data-bs-theme="dark">
 
-            <div class="form-check text-white mx-3">
-                <input class="form-check-input" type="checkbox" name="on_sale" id="flexCheckDefault" value="on"
-                       {% if request.GET.on_sale == 'on' %}checked{% endif %}>
-                {% if request.GET.q %}
-                    <input type="hidden" name="q" value="{{ request.GET.q }}">
-                    {% csrf_token %}
-                {% endif %}
-                <label class="form-check-label" for="flexCheckDefault">
-                    Товары по акции
-                </label>
-            </div>
-            <p class="text-white mx-3 mt-3">Сортировать:</p>
-            <div class="form-check text-white mx-3">
-                <input class="form-check-input" type="radio" name="order" id="flexRadioDefault1" value="default"
-                       {% if request.GET.order == 'default' or request.GET.order == None %}checked{% endif %}>
-                <label class="form-check-label" for="flexRadioDefault1">
-                    По умолчанию
-                </label>
-            </div>
-            <div class="form-check text-white mx-3">
-                <input class="form-check-input" type="radio" name="order" id="flexRadioDefault2" value="price"
-                       {% if request.GET.order == 'price' %}checked{% endif %}>
-                <label class="form-check-label" for="flexRadioDefault2">
-                    От дешевых к дорогим
-                </label>
-            </div>
-            <div class="form-check text-white mx-3">
-                <input class="form-check-input" type="radio" name="order" id="flexRadioDefault3" value="-price"
-                       {% if request.GET.order == '-price' %}checked{% endif %}>
-                <label class="form-check-label" for="flexRadioDefault3">
-                    От дорогих к дешевым
-                </label>
-            </div>
-            <button type="submit" class="btn btn-primary mx-3 mt-3">Применить</button>
+                <div class="form-check text-white mx-3">
+                    <input class="form-check-input" type="checkbox" name="on_sale" id="flexCheckDefault" value="on"
+                           {% if request.GET.on_sale == 'on' %}checked{% endif %}>
+                    {% if request.GET.q %}
+                        <input type="hidden" name="q" value="{{ request.GET.q }}">
+                        {% csrf_token %}
+                    {% endif %}
+                    <label class="form-check-label" for="flexCheckDefault">
+                        Товары по акции
+                    </label>
+                </div>
+                <p class="text-white mx-3 mt-3">Сортировать:</p>
+                <div class="form-check text-white mx-3">
+                    <input class="form-check-input" type="radio" name="order" id="flexRadioDefault1" value="default"
+                           {% if request.GET.order == 'default' or request.GET.order == None %}checked{% endif %}>
+                    <label class="form-check-label" for="flexRadioDefault1">
+                        По умолчанию
+                    </label>
+                </div>
+                <div class="form-check text-white mx-3">
+                    <input class="form-check-input" type="radio" name="order" id="flexRadioDefault2" value="price"
+                           {% if request.GET.order == 'price' %}checked{% endif %}>
+                    <label class="form-check-label" for="flexRadioDefault2">
+                        От дешевых к дорогим
+                    </label>
+                </div>
+                <div class="form-check text-white mx-3">
+                    <input class="form-check-input" type="radio" name="order" id="flexRadioDefault3" value="-price"
+                           {% if request.GET.order == '-price' %}checked{% endif %}>
+                    <label class="form-check-label" for="flexRadioDefault3">
+                        От дорогих к дешевым
+                    </label>
+                </div>
+                <button type="submit" class="btn btn-primary mx-3 mt-3">Применить</button>
             </form>
         </div>
-        <h3 class="mt-4">Результаты поиска по запросу <span style="background-color: yellow">{{ request.GET.q }}</span></h3>
-        {%  if not goods %}
+        <h3 class="mt-4">Результаты поиска по запросу <span style="background-color: yellow">{{ request.GET.q }}</span>
+        </h3>
+        {% if not goods %}
 
-        <h3 class="mt-4">Ничего не найдено</h3>
+            <h3 class="mt-4">Ничего не найдено</h3>
         {% endif %}
         <!-- Карта товара -->
         {% for good in goods %}
@@ -73,9 +74,10 @@
                     {% endif %}
                     <div class="card-body">
                         <a href="{{ good.get_absolute_url }}">
-                            <p class="card-title">{% autoescape off %} {{ good.headline }}{%  endautoescape %}</p>
+                            <p class="card-title">{% autoescape off %} {{ good.headline }}{% endautoescape %}</p>
                         </a>
-                        <p class="card-text">{% autoescape off %}{{ good.bodyline|truncatechars:100 }}{%  endautoescape %}</p>
+                        <p class="card-text">
+                            {% autoescape off %}{{ good.bodyline|truncatechars:100 }}{% endautoescape %}</p>
                         <p class="product_id">id: {{ good.display_id }}</p>
                         <div class="d-flex justify-content-between">
                             {% if good.discount %}
@@ -87,7 +89,8 @@
                             {% endif %}
 
 
-                            <a href="{% url 'carts:cart_add' %}" class="btn add-to-cart" data-product-id="{{ good.id }}">
+                            <a href="{% url 'carts:cart_add' %}" class="btn add-to-cart"
+                               data-product-id="{{ good.id }}">
                                 {% csrf_token %}
                                 <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
                                      width="32" height="32">
@@ -107,7 +110,7 @@
 {% block footer %}
     <!-- Пагинация -->
     {% if goods.has_other_pages %}
-    <div class="mt-auto">
+        <div class="mt-auto">
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center">
                 <div class="custom-shadow d-flex rounded">
@@ -144,14 +147,14 @@
                 </div>
             </ul>
         </nav>
-        {% endif %}
-        <!-- Пагинация -->
+    {% endif %}
+<!-- Пагинация -->
 
-        <footer class="mt-auto py-1 bg-dark">
-            <div class="container">
-                <p class="m-2 text-center text-white">Copyright &copy; Baks Hi-Tech store 2024</p>
-            </div>
-        </footer>
+<footer class="mt-auto py-1 bg-dark">
+    <div class="container">
+        <p class="m-2 text-center text-white">Copyright &copy; Baks Hi-Tech store 2024</p>
     </div>
+</footer>
+</div>
 
 {% endblock %}
