--- a/orders/templates/orders/create_order.html
+++ b/orders/templates/orders/create_order.html
@@ -4,79 +4,82 @@
 
 {% block content %}
 
-<!-- Контент на странице -->
-<div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
-    <div class="container">
-        <h3 class="text-center mb-4">Выбранные товары</h3>
-        <div class="container" id="cart-items-container">
-            <!-- Разметка корзины -->
-            {% user_carts request as carts %}
-            {% include 'carts/includes/include_carts.html' %}
-            <!-- Закончилась разметка корзины -->
+    <!-- Контент на странице -->
+    <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
+        <div class="container">
+            <h3 class="text-center mb-4">Выбранные товары</h3>
+            <div class="container" id="cart-items-container">
+                <!-- Разметка корзины -->
+                {% user_carts request as carts %}
+                {% include 'carts/includes/include_carts.html' %}
+                <!-- Закончилась разметка корзины -->
+            </div>
         </div>
-    </div>
-    <!-- Детали заказа -->
-    <div class="container">
-        <h3 class="text-center">Детали заказа</h3>
-        <div class="card mb-3">
-            <div class="card-body">
-                <form action="{% url 'orders:create_order' %}" method="POST" id="create_order_form">
-                    {% csrf_token %}
-                    <div class="row">
-                        <div class="col-md-6 mb-3">
-                            <label for="id_first_name" class="form-label">Имя*:</label>
-                            <input type="text" class="form-control" id="id_first_name"
-                                   name="first_name" required value="{% if form.first_name.value %}{{ form.first_name.value }}{% endif %}">
-                        </div>
-                        <div class="col-md-6 mb-3">
-                            <label for="id_last_name" class="form-label">Фамилия*:</label>
-                            <input type="text" class="form-control" id="id_last_name" name="last_name" required value="{% if form.last_name.value %}{{ form.last_name.value }}{% endif %}">
-                        </div>
-                        <div class="col-md-6 mb-3">
-                            <label for="id_phone_number" class="form-label">Номер телефона*:</label>
-                            <input type="text" class="form-control" id="id_phone_number" name="phone_number"
-                                   value="{% if form.phone_number.value %}{{ form.phone_number.value }}{% endif %}"
-                                   placeholder="В формате: XXX-XXX-XX-XX"
-                                   required>
-                        </div>
-                        <div class="col-md-12 mb-3">
-                            <label for="delivery" class="form-label">Способ доставки: </label>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="required_delivery"
-                                       id="id_required_delivery" value="1" checked>
-                                <label class="form-check-label" for="id_required_delivery">Нужна
-                                    доставка</label>
+        <!-- Детали заказа -->
+        <div class="container">
+            <h3 class="text-center">Детали заказа</h3>
+            <div class="card mb-3">
+                <div class="card-body">
+                    <form action="{% url 'orders:create_order' %}" method="POST" id="create_order_form">
+                        {% csrf_token %}
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="id_first_name" class="form-label">Имя*:</label>
+                                <input type="text" class="form-control" id="id_first_name"
+                                       name="first_name" required
+                                       value="{% if form.first_name.value %}{{ form.first_name.value }}{% endif %}">
                             </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="required_delivery"
-                                       id="id_required_delivery" value="0">
-                                <label class="form-check-label" for="id_required_delivery">Самовывоз</label>
+                            <div class="col-md-6 mb-3">
+                                <label for="id_last_name" class="form-label">Фамилия*:</label>
+                                <input type="text" class="form-control" id="id_last_name" name="last_name" required
+                                       value="{% if form.last_name.value %}{{ form.last_name.value }}{% endif %}">
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="id_phone_number" class="form-label">Номер телефона*:</label>
+                                <input type="text" class="form-control" id="id_phone_number" name="phone_number"
+                                       value="{% if form.phone_number.value %}{{ form.phone_number.value }}{% endif %}"
+                                       placeholder="В формате: XXX-XXX-XX-XX"
+                                       required>
+                            </div>
+                            <div class="col-md-12 mb-3">
+                                <label for="delivery" class="form-label">Способ доставки: </label>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="required_delivery"
+                                           id="id_required_delivery" value="1" checked>
+                                    <label class="form-check-label" for="id_required_delivery">Нужна
+                                        доставка</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="required_delivery"
+                                           id="id_required_delivery" value="0">
+                                    <label class="form-check-label" for="id_required_delivery">Самовывоз</label>
+                                </div>
+                            </div>
+                            <div class="mb-3" id="deliveryAddressField">
+                                <label for="id_delivery_address" class="form-label">Адрес
+                                    доставки*:</label>
+                                <textarea class="form-control" id="id_delivery_address"
+                                          name="delivery_address" rows="2"
+                                          value="
+                                                  {% if form.delivery_address.value %}{{ form.delivery_address.value }}{% endif %}"></textarea>
+                            </div>
+                            <div class="col-md-12 mb-3">
+                                <label class="form-label">Способ оплаты: </label>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="payment_on_delivery"
+                                           id="id_payment_on_delivery" value="0" checked>
+                                    <label class="form-check-label" for="id_payment_on_delivery">Оплата
+                                        картой</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="payment_on_delivery"
+                                           id="id_ppayment_on_delivery" value="1">
+                                    <label class="form-check-label" for="id_payment_on_delivery">Наличными/картой
+                                        при плучении</label>
+                                </div>
                             </div>
                         </div>
-                        <div class="mb-3" id="deliveryAddressField">
-                            <label for="id_delivery_address" class="form-label">Адрес
-                                доставки*:</label>
-                            <textarea class="form-control" id="id_delivery_address"
-                                      name="delivery_address" rows="2"
-                            value="{% if form.delivery_address.value %}{{ form.delivery_address.value }}{% endif %}"></textarea>
-                        </div>
-                        <div class="col-md-12 mb-3">
-                            <label class="form-label">Способ оплаты: </label>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="payment_on_delivery"
-                                       id="id_payment_on_delivery" value="0" checked>
-                                <label class="form-check-label" for="id_payment_on_delivery">Оплата
-                                    картой</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="radio" name="payment_on_delivery"
-                                       id="id_ppayment_on_delivery" value="1">
-                                <label class="form-check-label" for="id_payment_on_delivery">Наличными/картой
-                                    при плучении</label>
-                            </div>
-                        </div>
-                    </div>
-                {% if form.errors %}
+                        {% if form.errors %}
                             <div class="alert alert-danger alert-dismissible fade show">
                                 {% for error in form.errors.as_data.values %}
                                     {% for data in error.0 %}
@@ -85,11 +88,11 @@
                                 {% endfor %}
                             </div>
                         {% endif %}
-                    <button type="submit" class="btn btn-dark">Оформить заказ</button>
-                </form>
+                        <button type="submit" class="btn btn-dark">Оформить заказ</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
-</div>
 
 {% endblock %}
