--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,153 +1,164 @@
 {% extends 'base.html' %}
-{%  load static %}
+{% load static %}
+{% load cache %}
 
 {% load carts_tags %}
 
-<!-- Стиль footer-a для главной страницы -->
 
-<!-- Favicons for different platforms -->
 
 {% block content %}
 
 
 
-<!-- Контент на странице -->
-                    <div class="row">
-                        <div class="container mt-5">
+    <!-- Контент на странице -->
+    <div class="row">
+        <div class="container mt-5">
+            <div class="row">
+                <!-- Профиль с данными пользователя -->
+                <div class="col-md-5">
+                    <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
+                        <h3 class="text-center mb-4">Профиль пользователя</h3>
+                        <form action="" method="POST" enctype="multipart/form-data">
+                            {% csrf_token %}
                             <div class="row">
-                                <!-- Профиль с данными пользователя -->
-                                <div class="col-md-5">
-                                    <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
-                                        <h3 class="text-center mb-4">Профиль пользователя</h3>
-                                        <form action="" method="POST" enctype="multipart/form-data">
-                                            {% csrf_token %}
-                                            <div class="row">
-                                                <div class="col-md-12 mb-3 text-center">
-                                                {% if user.photo %}
-                                                    <img src="{{ user.photo.url }}"
-                                                        alt="Аватар пользователя" class="img-fluid rounded-circle"
-                                                        style="max-width: 150px;">
-                                                    {% else %}
-                                                    <img src="{% static 'deps/images/avatar.png' %}"
-                                                        alt="Аватар пользователя" class="img-fluid rounded-circle"
-                                                        style="max-width: 150px;">
-                                                    {% endif %}
-                                                    <input type="file" class="form-control mt-3" id="id_photo" name="photo"
-                                                        accept="image/*">
+                                <div class="col-md-12 mb-3 text-center">
+                                    {% if user.photo %}
+                                        <img src="{{ user.photo.url }}"
+                                             alt="Аватар пользователя" class="img-fluid rounded-circle"
+                                             style="max-width: 150px;">
+                                    {% else %}
+                                        <img src="{% static 'deps/images/avatar.png' %}"
+                                             alt="Аватар пользователя" class="img-fluid rounded-circle"
+                                             style="max-width: 150px;">
+                                    {% endif %}
+                                    <input type="file" class="form-control mt-3" id="id_photo" name="photo"
+                                           accept="image/*">
 
-                                                </div>
-                                                <div class="col-md-12 mb-3">
-                                                    <label for="id_firstName" class="form-label">Имя*</label>
-                                                    <input type="text" class="form-control" id="id_firstName" name="first_name"
-                                                         value="{{ user.first_name }}" required>
-                                                </div>
-                                                <div class="col-md-12 mb-3">
-                                                    <label for="id_lastName" class="form-label">Фамилия*</label>
-                                                    <input type="text" class="form-control" id="id_lastName" name="last_name"
-                                                         value="{{ user.last_name }}" required>
-                                                </div>
-                                                <div class="col-md-12 mb-3">
-                                                    <label for="id_username" class="form-label">Имя пользователя*</label>
-                                                    <input type="text" class="form-control" id="id_username" name="username"
-                                                         value="{{ user.username }}" required>
-                                                </div>
-                                                <div class="col-md-12 mb-3">
-                                                    <label for="id_email" class="form-label">Email*</label>
-                                                    <input type="email" class="form-control" id="id_email" name="email"
-                                                           value="{{ user.email }}"
-                                                        required>
-                                                </div>
-                                                <div class="col-md-12 mb-3">
-                                                    <label for="id_phone_number" class="form-label">Номер телефона</label>
-                                                    <input type="phone_numberl" class="form-control" id="id_phone_number" name="phone_number"
-                                                           value="{{ user.phone_number }}"
-                                                        required>
-                                                </div>
-                                            </div>
-                                            <button type="submit" class="btn btn-dark">Сохранить</button>
-                                        </form>
-                            {% if form.errors %}
-                                    <div class="alert alert-danger alert-dismissible fade show">
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    <label for="id_firstName" class="form-label">Имя*</label>
+                                    <input type="text" class="form-control" id="id_firstName" name="first_name"
+                                           value="{{ user.first_name }}" required>
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    <label for="id_lastName" class="form-label">Фамилия*</label>
+                                    <input type="text" class="form-control" id="id_lastName" name="last_name"
+                                           value="{{ user.last_name }}" required>
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    <label for="id_username" class="form-label">Имя пользователя*</label>
+                                    <input type="text" class="form-control" id="id_username" name="username"
+                                           value="{{ user.username }}" required>
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    <label for="id_email" class="form-label">Email*</label>
+                                    <input type="email" class="form-control" id="id_email" name="email"
+                                           value="{{ user.email }}"
+                                           required>
+                                </div>
+                                <div class="col-md-12 mb-3">
+                                    <label for="id_phone_number" class="form-label">Номер телефона</label>
+                                    <input type="phone_numberl" class="form-control" id="id_phone_number"
+                                           name="phone_number"
+                                           value="{{ user.phone_number }}"
+                                           required>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-dark">Сохранить</button>
+                        </form>
+                        {% if form.errors %}
+                            <div class="alert alert-danger alert-dismissible fade show">
                                 {% for error in form.errors.as_data.values %}
                                     {% for data in error.0 %}
                                         <p>{{ data }}</p>
                                     {% endfor %}
                                 {% endfor %}
+                            </div>
+                        {% endif %}
+                    </div>
+                </div>
+                <!-- Корзина -->
+                {% user_carts request as carts %}
+                <div class="col-md-7">
+                    <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
+                        <h3 class="text-center mb-4">Корзина</h3>
+                        <div class="container" id="cart-items-container">
+                            <!-- Разметка корзины -->
+                            {% include 'carts/includes/include_carts.html' %}
+                            <!-- Закончилась разметка корзины -->
                         </div>
-                            {% endif %}
-                                    </div>
-                                </div>
-                                <!-- Корзина -->
-                                {% user_carts request as carts %}
-                                <div class="col-md-7">
-                                    <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
-                                        <h3 class="text-center mb-4">Корзина</h3>
-                                        <div class="container" id="cart-items-container">
-                                            <!-- Разметка корзины -->
-                                        {% include 'carts/includes/include_carts.html' %}
-                                            <!-- Закончилась разметка корзины -->
-                                        </div>
 
 
+                    </div>
+                </div>
+                {% cache 60 user_order_cache user.pk %}
+                    <!-- Оформленные заказы -->
+                    <div class="col-md-12">
+                    <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
+                    <h3 class="text-center mb-4">Мои заказы</h3>
+                    <!-- Разметка заказов -->
 
-                                    </div>
-                                </div>
-                                <!-- Оформленные заказы -->
-                                <div class="col-md-12">
-                                    <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
-                                        <h3 class="text-center mb-4">Мои заказы</h3>
-                                        <!-- Разметка заказов -->
+                    <div class="container">
+                        <div class="accordion" id="accordionExample">
+                            {% for ord in orders %}
+                                <div class="accordion-item">
+                                    <h2 class="accordion-header" id="heading{{ ord.id }}">
+                                        <button class="accordion-button {% if ord != orders.0 %}collapsed{% endif %}"
+                                                type="button" data-bs-toggle="collapse"
+                                                data-bs-target="#collapse{{ ord.id }}" aria-expanded="false"
+                                                aria-controls="collapse{{ ord.id }}">
+                                            Заказ № {{ ord.id }} от {{ ord.created_timestamp }} | Статус: <strong
+                                                class="mx-2">{{ ord.get_status_display }}</strong>
+                                        </button>
+                                    </h2>
+                                    <div id="collapse{{ ord.id }}"
+                                         class="accordion-collapse collapse {% if ord == orders.0 %}show{% endif %}"
+                                         aria-labelledby="heading{{ ord.id }}" data-bs-parent="#accordionExample">
+                                        <div class="accordion-body">
+                                            <table class="table table-dark table-hover">
+                                                <thead>
+                                                <tr>
+                                                    <th>Товар</th>
+                                                    <th>Количество</th>
+                                                    <th>Цена</th>
+                                                    <th>Общая стоимость</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                {% for item in ord.orderitem_set.all %}
+                                                    <tr>
+                                                        <td><a class="text-white"
+                                                               href="{{ item.product.get_absolute_url }}"> {{ item.name }}</a>
+                                                        </td>
+                                                        <td>{{ item.quantity }}</td>
+                                                        <td>{{ item.price }} $</td>
+                                                        <td>{{ item.products_price }} $</td>
 
-                                        <div class="container">
-                                            <div class="accordion" id="accordionExample">
-                                                {% for ord in orders %}
-                                                <div class="accordion-item">
-                                                    <h2 class="accordion-header" id="heading{{ ord.id }}">
-                                                        <button class="accordion-button {% if ord != orders.0 %}collapsed{% endif %}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ ord.id }}" aria-expanded="false" aria-controls="collapse{{ ord.id }}">
-                                                           Заказ № {{ ord.id }} от {{ ord.created_timestamp }} | Статус: <strong class="mx-2">{{ ord.get_status_display }}</strong>
-                                                        </button>
-                                                    </h2>
-                                                    <div id="collapse{{ ord.id }}" class="accordion-collapse collapse {% if ord == orders.0 %}show{% endif %}" aria-labelledby="heading{{ ord.id }}" data-bs-parent="#accordionExample">
-                                                        <div class="accordion-body">
-                                                            <table class="table table-dark table-hover">
-                                                                <thead>
-                                                                    <tr>
-                                                                        <th>Товар</th>
-                                                                        <th>Количество</th>
-                                                                        <th>Цена</th>
-                                                                        <th>Общая стоимость</th>
-                                                                    </tr>
-                                                                </thead>
-                                                                <tbody>
-                                                                {% for item in ord.orderitem_set.all %}
-                                                                    <tr>
-                                                                        <td><a class="text-white" href="{{item.product.get_absolute_url}}"> {{ item.name }}</a></td>
-                                                                        <td>{{ item.quantity }}</td>
-                                                                        <td>{{ item.price }} $</td>
-                                                                        <td>{{ item.products_price }} $</td>
-
-                                                                    </tr>
-                                                                    {% endfor %}
-                                                                </tbody>
-                                                            </table>
-                                                            <div class="d-flex justify-content-between">
-                                                                <p><strong>Итого:</strong></p>
-                                                                <p><strong>{{ ord.orderitem_set.total_price }} $</strong></p>
-
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
+                                                    </tr>
                                                 {% endfor %}
+                                                </tbody>
+                                            </table>
+                                            <div class="d-flex justify-content-between">
+                                                <p><strong>Итого:</strong></p>
+                                                <p><strong>{{ ord.orderitem_set.total_price }} $</strong></p>
+
                                             </div>
                                         </div>
-                                        <!-- Закончилась разметка заказов -->
                                     </div>
                                 </div>
-                            </div>
+                            {% endfor %}
                         </div>
                     </div>
+                {% endcache %}
+                <!-- Закончилась разметка заказов -->
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
+
+
 {% block footer %}
     <div class="mt-auto">
         <footer class="mt-auto py-1 bg-dark">
