--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% load cache %}
+{#{% load cache %}#}
 
 {% load carts_tags %}
 
@@ -96,65 +96,65 @@
 
                     </div>
                 </div>
-                {% cache 60 user_order_cache user.pk %}
-                    <!-- Оформленные заказы -->
-                    <div class="col-md-12">
-                    <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">
-                    <h3 class="text-center mb-4">Мои заказы</h3>
-                    <!-- Разметка заказов -->
-
-                    <div class="container">
-                        <div class="accordion" id="accordionExample">
-                            {% for ord in orders %}
-                                <div class="accordion-item">
-                                    <h2 class="accordion-header" id="heading{{ ord.id }}">
-                                        <button class="accordion-button {% if ord != orders.0 %}collapsed{% endif %}"
-                                                type="button" data-bs-toggle="collapse"
-                                                data-bs-target="#collapse{{ ord.id }}" aria-expanded="false"
-                                                aria-controls="collapse{{ ord.id }}">
-                                            Заказ № {{ ord.id }} от {{ ord.created_timestamp }} | Статус: <strong
-                                                class="mx-2">{{ ord.get_status_display }}</strong>
-                                        </button>
-                                    </h2>
-                                    <div id="collapse{{ ord.id }}"
-                                         class="accordion-collapse collapse {% if ord == orders.0 %}show{% endif %}"
-                                         aria-labelledby="heading{{ ord.id }}" data-bs-parent="#accordionExample">
-                                        <div class="accordion-body">
-                                            <table class="table table-dark table-hover">
-                                                <thead>
-                                                <tr>
-                                                    <th>Товар</th>
-                                                    <th>Количество</th>
-                                                    <th>Цена</th>
-                                                    <th>Общая стоимость</th>
-                                                </tr>
-                                                </thead>
-                                                <tbody>
-                                                {% for item in ord.orderitem_set.all %}
-                                                    <tr>
-                                                        <td><a class="text-white"
-                                                               href="{{ item.product.get_absolute_url }}"> {{ item.name }}</a>
-                                                        </td>
-                                                        <td>{{ item.quantity }}</td>
-                                                        <td>{{ item.price }} $</td>
-                                                        <td>{{ item.products_price }} $</td>
-
-                                                    </tr>
-                                                {% endfor %}
-                                                </tbody>
-                                            </table>
-                                            <div class="d-flex justify-content-between">
-                                                <p><strong>Итого:</strong></p>
-                                                <p><strong>{{ ord.orderitem_set.total_price }} $</strong></p>
-
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            {% endfor %}
-                        </div>
-                    </div>
-                {% endcache %}
+{#                {% cache 60 user_order_cache user.pk %}#}
+{#                    <!-- Оформленные заказы -->#}
+{#                    <div class="col-md-12">#}
+{#                    <div class=" bg-white p-4 mb-4 mx-2 rounded custom-shadow">#}
+{#                    <h3 class="text-center mb-4">Мои заказы</h3>#}
+{#                    <!-- Разметка заказов -->#}
+{##}
+{#                    <div class="container">#}
+{#                        <div class="accordion" id="accordionExample">#}
+{#                            {% for ord in orders %}#}
+{#                                <div class="accordion-item">#}
+{#                                    <h2 class="accordion-header" id="heading{{ ord.id }}">#}
+{#                                        <button class="accordion-button {% if ord != orders.0 %}collapsed{% endif %}"#}
+{#                                                type="button" data-bs-toggle="collapse"#}
+{#                                                data-bs-target="#collapse{{ ord.id }}" aria-expanded="false"#}
+{#                                                aria-controls="collapse{{ ord.id }}">#}
+{#                                            Заказ № {{ ord.id }} от {{ ord.created_timestamp }} | Статус: <strong#}
+{#                                                class="mx-2">{{ ord.get_status_display }}</strong>#}
+{#                                        </button>#}
+{#                                    </h2>#}
+{#                                    <div id="collapse{{ ord.id }}"#}
+{#                                         class="accordion-collapse collapse {% if ord == orders.0 %}show{% endif %}"#}
+{#                                         aria-labelledby="heading{{ ord.id }}" data-bs-parent="#accordionExample">#}
+{#                                        <div class="accordion-body">#}
+{#                                            <table class="table table-dark table-hover">#}
+{#                                                <thead>#}
+{#                                                <tr>#}
+{#                                                    <th>Товар</th>#}
+{#                                                    <th>Количество</th>#}
+{#                                                    <th>Цена</th>#}
+{#                                                    <th>Общая стоимость</th>#}
+{#                                                </tr>#}
+{#                                                </thead>#}
+{#                                                <tbody>#}
+{#                                                {% for item in ord.orderitem_set.all %}#}
+{#                                                    <tr>#}
+{#                                                        <td><a class="text-white"#}
+{#                                                               href="{{ item.product.get_absolute_url }}"> {{ item.name }}</a>#}
+{#                                                        </td>#}
+{#                                                        <td>{{ item.quantity }}</td>#}
+{#                                                        <td>{{ item.price }} $</td>#}
+{#                                                        <td>{{ item.products_price }} $</td>#}
+{##}
+{#                                                    </tr>#}
+{#                                                {% endfor %}#}
+{#                                                </tbody>#}
+{#                                            </table>#}
+{#                                            <div class="d-flex justify-content-between">#}
+{#                                                <p><strong>Итого:</strong></p>#}
+{#                                                <p><strong>{{ ord.orderitem_set.total_price }} $</strong></p>#}
+{##}
+{#                                            </div>#}
+{#                                        </div>#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                            {% endfor %}#}
+{#                        </div>#}
+{#                    </div>#}
+{#                {% endcache %}#}
                 <!-- Закончилась разметка заказов -->
                 </div>
                 </div>
