--- a/carts/templates/carts/includes/include_carts.html
+++ b/carts/templates/carts/includes/include_carts.html
@@ -51,8 +51,8 @@
         <h4 class="float-left"><strong>{{ carts.total_price }} $</strong></h4>
     </div>
 </div>
-{% if not order %}
-    <a class="btn btn-dark {% if not carts %}disabled{% endif %}" href="{% url "orders:create_order" %}">
-        Оформить заказ
-    </a>
-{% endif %}
+{#{% if not order %}#}
+{#    <a class="btn btn-dark {% if not carts %}disabled{% endif %}" href="{% url "orders:create_order" %}">#}
+{#        Оформить заказ#}
+{#    </a>#}
+{#{% endif %}#}
