--- a/goods/templates/goods/catalog.html
+++ b/goods/templates/goods/catalog.html
@@ -76,7 +76,7 @@
                             {% else %}
                                 <p><strong>{{ good.real_price }} $</strong></p>
                             {% endif %}
-                            <a href="#" class="btn add-to-cart"
+                            <a href="{% url 'carts:cart_add' %}" class="btn add-to-cart"
                                data-product-id="{{ good.id }}">
                                 {% csrf_token %}
                                 <img class="mx-1" src="{% static 'deps/icons/cart-plus.svg' %}" alt="Catalog Icon"
